application/infra/bff/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bff
spec:
  hosts:
  - "*"
  gateways:
  - merpay-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 4000
        host: bff
